<?xml version="1.0"?>
<package>
  <name>iCreate for MCL 3D</name>
  <version>1.0.0</version>
  <description>
    Publishes AR Drone Datastream
  </description>
  <maintainer email="arich@hmc.edu">Alex Rich</maintainer>
  <author>Alex Rich and John Allard</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
